* 2016.02.10 - * improving CLANG description for Android/ARM via Android NDK
               * improving CLANG version detection

* 2016.02.09 - * adding postfix for GCC env registration (such as -4.6)

* 2016.02.05 - * record all info during platform detection only 
                 when ck.cfg['record_all_platform_info']=='yes'.
                 Needed to avoid mess when recording local or global info
                 during experiment crowdsourcing.

* 2016.01.27 - * fixing installation of GCC trunk and LLVM trunk 
                 (preparing new engine to crowdsource optimizations)
               * adding support to select SW dependencies randomly
                 (useful to crowdsource experiments)

* 2016.01.16 - * adding UOA and UID of found platforms into detection stream

* 2016.01.12 - * adding possibility to enter and record name of platform, accelerator, cpu and OS
                 to local cfg if not automatically detected (for crowdtuning)

* 2016.01.11 - * fixing remote repo recaching if selecting different public CK server
                 during program optimization crowdsourcing
               * fixing automatic package installation bug (when crowdsourcing autotuning)

* 2016.01.04 - * adding 'show' function to platform.* to list all platforms 
                 participating in crowd-tuning and their parameters

* 2016.01.03 - * fixing exchange of information during crowd-tuning
                 (possiblity to find platform description in all repos)
               * adding possibility to identify user when recording
                 results during crowdtuning

* 2016.01.02 - * fixing GPU/accelerator detection for ARM/Qualcomm (for crowdtuning)
               * fixing platform name detection (to crowdsource optimization)

* 2015.12.19 - * adding env var CK_PLATFORM_INIT_UOA to automatically 
                 add platform scripts to PATH when dealing with CPU/GPU frequency

* 2015.12.14 - * fixing soft:lib.opencl.mali compilation for Android